# Life-payment-group-chat

./: .gitignore
client/: Sys_ResidentPayment.pro  admin_mainwindow.cpp  billsdialog.h  loginswitch.cpp  main.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  retrievedialog.cpp  retrievedialog.ui  socket.cpp  socket.h
client/src/: main.cpp
client/src/common/network/: socket.cpp  socket.h
client/src/ui/admin/: admin_mainwindow.h
client/src/ui/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
client/src/ui/resources/: resources.qrc  server.crt
server/: CMakeLists.txt  main.cpp
server/src/: main.cpp
server/src/business/: UserManager.h
server/src/cache/: redis.cpp  redis.hpp  redispool.cpp  redispool.h
server/src/db/: ConnectionPool.h
server/src/net/: Acceptor.h  EventLoop.cpp  EventLoopThreadPool.cpp  EventLoopThreadPool.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
